added important dates and documents

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 
     <div class="footer-col-1 column">
       <ul>
-        <li>{{ site.admin_name }}</li>
+        <li>Chair: {{ site.admin_name }}</li>
         <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
 		<li>
             <a class="acm" href="http://www.acm.org">Association for Computing Machinery</a></li>
