--- a/css/main.css
+++ b/css/main.css
@@ -504,7 +504,21 @@ float: left;
     font-size: 14pt;
     margin: 0;
     margin-bottom: 10px;
-    color: #551A8B;
+
+}
+
+.programblock h3 {
+    font-size: 12pt;
+    margin: 0;
+    margin-bottom: 10px;
+    color: #000080;
+}
+
+.programblock h4 {
+    font-size: 12pt;
+    font-weight: bold;
+    margin: 0;
+    color: #3d3d47;
 }
 
 .dateitem {
