added the keynote

--- a/css/main.css
+++ b/css/main.css
@@ -542,3 +542,11 @@ float: left;
 .programdesc li {
  margin-bottom: 10px;   
 }
+
+.keynotepic {
+
+    float:left;
+    margin-right: 15px;
+    margin-bottom: 15px;
+    
+}
