--- a/css/main.css
+++ b/css/main.css
@@ -543,6 +543,27 @@ float: left;
  margin-bottom: 10px;   
 }
 
+.awardblock {
+    clear: left;
+    margin-bottom: 20px;
+    margin-left: 0;
+    border-bottom: 1px solid #eeeeee;
+    
+}
+
+
+.awarditem {
+    color: #333333;
+    width: 100px;
+    margin-right: 20px;
+    float: left;
+}
+
+.awarddesc {
+    float: left;
+    width: 600px;
+}
+
 .keynotepic {
 
     float:left;
